[gd_scene load_steps=4 format=3 uid="uid://tmwwnddwi42m"]

[ext_resource type="Script" path="res://scripts/ExitArea.gd" id="1_eapkn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b3tp2"]
size = Vector2(26.1019, 39.1792)

[sub_resource type="GDScript" id="GDScript_pmx8n"]
script/source = "extends Marker2D


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="ExitArea" type="Area2D"]
script = ExtResource("1_eapkn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_b3tp2")

[node name="SpawnPoint" type="Marker2D" parent="."]
script = SubResource("GDScript_pmx8n")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
